--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,25 @@
-*{
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    /* border: 1px solid black; */
-}
-
-body{
-    height: 100vh;
-    width: 100%;
-    /* position: relative; */
-    font-family: Poppins;
-}
-
-.container{
-    position: absolute;
-    margin: 50px;
-}
-
-.header-section,
-.nav-area,
-.hero-section,
-.btn-area,
-.slides,
-.action-area,
-.feature,
-.product-description,
-.product-img,
-.atc {
-    display: flex;
-    flex-direction: row;
-}
-
-.container,
-.product-name,
-.product-features,
-.details-area,
-.image-area {
-    display: flex;
-    flex-direction: column;
-}
-
+/* header section */
 
 .header-section{
     width: 100%;
-    justify-content: space-between;
-    align-items: center;
+    padding: 10px 0px;
+    margin-bottom: 25px;
 }
 
+/* 
+header-section
+    logo-area
+*/
 .brand-logo{
     height: 40px;
 }
 
+/* 
+header-section
+    nav-area
+*/
 .nav-area{
     width: 100%;
-    justify-content: center;
-    align-items: center;
 }
 
 .nav-item{
@@ -65,62 +30,45 @@ body{
     font-weight: 500;
 }
 
+/* 
+header-section
+    action-area
+*/
 .action-icon{
     height: 25px;
     margin: 0px 6px;
 }
 
 
+/* ----------------------------------------------------------------------- */
 
-
+/* 
+hero-section
+*/
 .hero-section{
     height: 100%;
 }
 
+/* 
+hero-section
+    details-area
+*/
 
-.details-area{
-    width: 50% ;
-    justify-content: space-between;
-}
-
-
-
-
-.image-area{
-    width: 50%;
-    /* height: 100%; */
-    /* justify-content: space-between; */
-    align-items: stretch;
-    justify-content: flex-end;
-    position: relative;
-    height: 500px;
-}
-
-
-
-
-
-.product-img{
-    justify-content: center;
-    margin: 50px;
-    /* position: relative; */
-    
-}
-
-
-/* .border{
-    border: 1px solid black;
-} */
-
-
+/* 
+hero-section
+    details-area
+        product-name
+*/
 .product-name{
-    margin-top: 50px ;
-    align-items: ce;
+    /* margin-top: 50px ; */
+    align-items: flex-start;
+    width: 100%;
 }
 
 .heading{
     font-size: 30px;
     font-weight: 500;
+    width: 100%;
 }
 
 .heading:after{
@@ -141,7 +89,34 @@ body{
     font-family: "fredoka one";
     font-size: 60px;
     font-weight: 400;
-    d
+    width: 100%;
+    margin-top: 8px;
+}
+
+/* 
+hero-section
+    details-area
+        product-features
+*/
+
+.product-features{
+    width: 100%;
+    align-items: center;
+    padding: 10px 0px;
+}
+
+.details-area{
+    width: 50% ;
+    align-items: flex-start;
+}
+
+.feature{
+    font-size: 20px;
+    /* margin: 6px 0px; */
+    /* padding-left: 20px; */
+    width: 100%;
+    padding: 10px 0px;
+
 }
 
 .feature::before{
@@ -160,27 +135,36 @@ body{
     height: 25px;
     width: 25px;
     padding: 5px;
-    margin-right: 15px
+    margin-right: 15px;
+    margin-left: 25px
 }
 
-.feature{
-    font-size: 20px;
-    margin: 5px;
-    margin-left: 75px;
-
-}
+/* 
+hero-section
+    details-area
+        product-description     
+*/
 
 .product-description{
     justify-content: flex-start;
+
 }
 
 .description{
     font-size: 15px;
+    
 }
+
+/* 
+hero-section
+    details-area
+        btn-area     
+*/
 
 .btn-area{
     justify-content: flex-start;
-    align-items: center;
+    width: 100%;
+    padding: 10px 0px ;
 }
 
 .btn{
@@ -194,36 +178,52 @@ body{
     font-family: Poppins ;
 }
 
+/* --------------------------------------------------------------------------- */
 
-.slide-icon{
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    margin: 10px;
+/* 
+hero-section
+    image-area
+*/
+
+.container-image{
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
 }
 
-.slide-1{
-    background-color: #FBD104;
+.image-area{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 375px;
+
+    position: relative;
+
 }
 
-.slide-2{
-    background-color: #FE5E35;
-}
+/* 
+hero-section
+    image-area
+        product-img
+*/
 
-.slide-3{
-    background-color: black;
+.product-img{
+    width: 375px;
+    justify-content: center;
+    /* margin: 50px; */
+    /* position: relative; */
 }
-
 
 .p-img{
     height: 375px;
-    position: absolute;
+    /* position: absolute; */
     /* justify-content: center; */
     /* align-items: center; */
     z-index: -1;
     top: 0px;
     left: 125px;
 }
+
 
 
 .discount-img{
@@ -238,8 +238,17 @@ body{
 
 .discount-area{
     position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     height: 110px;
-    left: 80px;
+
+}
+
+.discount-area{
+    position: absolute;
+    height: 110px;
+    left: -40px;
     top: 225px;
 }
 
@@ -260,9 +269,53 @@ body{
     font-size: 25px;
 }
 
-.slides,
-.atc{
-    /* position: ce; */
-    justify-content: center;
-    align-items: center;
+/* .product-img{
+    margin: 50px;
+    /* position: relative; */
+/*     
+} */ 
+
+/* 
+hero-section
+    image-area
+        slides
+*/
+
+.slide-icon{
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    margin: 10px;
 }
+
+.slide-1{
+    background-color: #FBD104;
+}
+
+.slide-2{
+    background-color: #FE5E35;
+}
+
+.slide-3{
+    background-color: black;
+}
+
+/* 
+hero-section
+    image-area
+        atc
+*/
+
+/* --------------------------------------------------------------------------- */
+
+/* .bg-black{
+    border: 1px solid black;
+} */
+
+.red-black{
+    border: 1px solid red;
+}
+
+/* .blue-border{
+    border: 1px solid blue;
+} */
