temparay border removed

--- a/css/style.css
+++ b/css/style.css
@@ -312,9 +312,9 @@ hero-section
     border: 1px solid black;
 } */
 
-.red-black{
+/* .red-black{
     border: 1px solid red;
-}
+} */
 
 /* .blue-border{
     border: 1px solid blue;
