fix discount poistion

--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ hero-section
 }
 
 .image-area{
-    width: 100%;
+    width: 375px;
     align-items: center;
     justify-content: center;
     height: 375px;
