--- a/css/mediaq.css
+++ b/css/mediaq.css
@@ -79,3 +79,63 @@
         width: 375px;
     }
 }
+
+@media screen and (max-width:512px) {
+    .container{
+        padding: 20px ;
+    }
+
+    .image-area{
+        width: 300px;
+        height: 300px;
+    }
+
+    .product-img{
+        width: 300px;
+    }
+
+    .p-img{
+        height: 300px;
+        z-index: -1;
+        top: 0px;
+        left: 125px;
+    }
+
+    .image-area{
+        width: 300px;
+        height: 300px;
+        margin-left: 10px;
+    }
+
+
+
+
+    .discount-img{
+        left: 80px;
+        top: 225px;
+        height: 80px;
+        
+    }
+    
+    
+    .discount-area{
+        height: 110px;
+        left: -35px;
+        top: 180px;
+    }
+
+
+
+    .discount-text{
+        top: 21px;
+        left: 16px;
+        font-size: 12px;
+    }
+    
+    .discount-percentage{
+        top: 38px;
+        left: 25px;
+        font-size: 20px;
+    }
+
+}
